--- a/Juego_Adivinacion.html
+++ b/Juego_Adivinacion.html
@@ -13,13 +13,27 @@
 		saltarLinea(); //Se puede agrar una funt dentro de otra
 	}//Funcion que te permite ingreso de datos para una funcion
 
-    var numeroPensado = Math.round(Math.random()*10*4);
-    var numeroLanzado = parseInt(prompt("Ingrese un numero pensado entre 0-10"))
+    var numeroPensado = Math.round(Math.random()*10);
+    var intentos = 3;
+    var contador = 1;
 
+    while (contador <= intentos){
+        var numeroLanzado = parseInt(prompt("Ingrese un numero pensado entre 0-10"));
+        if(numeroPensado == numeroLanzado){
+            alert("Usted acerto, en el intento " + contador + " el numero pensado era " + numeroPensado);
+            break;
+        }else{
+            alert("Usted erró")
+        }
+        contador++;
+    }
+    
     if(numeroPensado == numeroLanzado){
-        imprimir("Usted acerto");
+        imprimir("Usted acerto, en el intento " + contador + " el numero pensado era " + numeroPensado);
     }else{
         imprimir("Usted erró, el numero pensado era " + numeroPensado)
     }
+
+    imprimir("fin");
 
 </script>
