--- a/Juego_Secreto.html
+++ b/Juego_Secreto.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 
-<h1>PROGRAMA DE ESTRELLAS</h1>
+<h1>PROGRAMA DE JUEGO SECRETO/h1>
 
 <input type="text">
 <button>Verificar</button>
@@ -17,7 +17,7 @@
             alert("Usted erro");
         }
 
-        input.value = ""; 
+        input.value = ""; //Dejar vacio el campo
         input.focus(); //cuando se hace la  accion te manda  a la direccion direcctamente
     }
 
