--- a/Juego_Secreto.html
+++ b/Juego_Secreto.html
@@ -1,12 +1,13 @@
 <meta charset="utf-8">
 
-<h1>PROGRAMA DE JUEGO SECRETO/h1>
+<h1>PROGRAMA DE JUEGO SECRETO</h1>
 
-<input type="text">
+<input/>
 <button>Verificar</button>
 
 <script>
     var secreto = Math.round(Math.random());
+    //var secreto = 4;
     var input = document.querySelector("input");
     input.focus(); //Para que inicie el em capo imput
 
