--- a/Juego_Secretov2.html
+++ b/Juego_Secretov2.html
@@ -2,25 +2,22 @@
 
 <h1>PROGRAMA DE JUEGO SECRETO</h1>
 
-<input type="text">
+<input/>
 <button>Verificar</button>
 
 <script>
 
-    var secretos = [3,5,7,9];
+    var secretos = [3,5,7,9,11];
 
     var input = document.querySelector("input");
-    input.focus(); //Para que inicie el em capo imput
+    input.focus(); //Para que inicie el en que campo imput
 
     function verificar(){
-        // if(parseInt(input.value) == secreto){
-        //     alert("Usted acerto");
-        // }else{
-        //     alert("Usted erro");
-        // }
+        
         var encontrado = false;
 
-        for(var posicon = 0 ; posicion < 4; posicion++){
+        for(var posicion = 0 ; posicion < secretos.length ; posicion++){
+            
             if(parseInt(input.value) == secretos[posicion]){         
                 alert("Usted acerto");
                 encontrado = true;
