--- a/logicaProg Practicando con Juego y animaciones/canvasV5.html
+++ b/logicaProg Practicando con Juego y animaciones/canvasV5.html
@@ -37,12 +37,12 @@
     
     function actualizarPantalla(){
         limpiarPantalla();
-        var xAleatorio = sortearPosicion(600);
-        var yAleatorio = sortearPosicion(400);
+        xAleatorio = sortearPosicion(600);
+        yAleatorio = sortearPosicion(400);
         disenarObjetivo(xAleatorio,yAleatorio);
     }
 
-    setInterval(actualizarPantalla,2000);
+    setInterval(actualizarPantalla,4000);
 
     function disparar(evento){
         var x = evento.pageX - pantalla.offsetLeft;
