--- a/FrontEnd_Curso4/index.html
+++ b/FrontEnd_Curso4/index.html
@@ -10,10 +10,14 @@
 </head>
 <body>
 
+    <header>
+        <h1 class="titlePrin">Barberia Alura</h1>
+    </header>
+
     <img id="banner" src="assets/img/banner.jpg">
 
     <div class="principal">
-        <h1>Sobre la Barbería Alura</h1>
+        <h2 class="titleCenter">Sobre la Barbería Alura</h2>
 
         <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong>  trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
         </p>
@@ -26,7 +30,7 @@
     </div>
     
     <div class="diferenciales">
-        <h2>Diferenciales</h2>
+        <h3 class="titleCenter">Diferenciales</h3>
         <ul>
             <li class="items">Atencion perosalizada</li>
             <li class="items">Espacio diferenciado</li>
