--- a/FrontEnd_Curso4/productos.html
+++ b/FrontEnd_Curso4/productos.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Barberia Alura</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/productos.css">
 </head>
 <body>
     <header>
-        <h1><img src="assets/img/logo.png" alt=""></h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li> <a href="productos.html">Productos</a></li>
-                <li> <a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="caja">
+            <h1><img src="assets/img/logo.png" alt=""></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li> <a href="productos.html">Productos</a></li>
+                    <li> <a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+        
         
     </header>
 </body>
