--- a/FrontEnd_Curso4/productos.html
+++ b/FrontEnd_Curso4/productos.html
@@ -46,5 +46,10 @@
             </li>
         </ul>
     </main>
+
+    <footer>
+        <img src="assets/img/logo-blanco.png" alt="">
+        <p class="copyright">&copy Copyright Barberia Alura - 2023</p>
+    </footer>
 </body>
 </html>
