--- a/FrontEnd_Curso4/contacto.html
+++ b/FrontEnd_Curso4/contacto.html
@@ -26,6 +26,19 @@
 
     <main>
         <h2>Contacto</h2>
+
+        <form action="">
+            <label for="nombreapellido">Nombre y apellido</label>
+            <input type="text" id="nombreapellido">
+
+            <label for="correoelectronico">Correo Electronico</label>
+            <input type="text" id="correoelectronico">
+
+            <label for="telefono">Telefono</label>
+            <input type="text" id="telefono">
+
+            <input type="submit" value="Enviar formulario">
+        </form>
     </main>
 
     <footer>
