--- a/FrontEnd_Curso4/contacto.html
+++ b/FrontEnd_Curso4/contacto.html
@@ -61,7 +61,7 @@
             </fieldset>
 
             <label class="checkbox"><input type="checkbox" checked>Le gustaria recibir novedades de la barberia alura?</label>
-            <input type="submit" value="Enviar formulario">
+            <input type="submit" value="Enviar formulario" class="enviar">
         </form>
     </main>
 
