--- a/FrontEnd_Curso4/contacto.html
+++ b/FrontEnd_Curso4/contacto.html
@@ -63,6 +63,30 @@
             <label class="checkbox"><input type="checkbox" checked>Le gustaria recibir novedades de la barberia alura?</label>
             <input type="submit" value="Enviar formulario" class="enviar">
         </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horario</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lunes</td>
+                    <td>08h - 20h</td>
+                </tr>
+                <tr>
+                    <td>Miercoles</td>
+                    <td>08h - 20h</td>
+                </tr>
+                <tr>
+                    <td>Viernes</td>
+                    <td>08h - 20h</td>
+                </tr>
+            </tbody>
+            
+        </table>
     </main>
 
     <footer>
